--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
     "@nextui-org/react": "^2.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
