hamburger menu added

--- a/app/data/projects.json
+++ b/app/data/projects.json
@@ -41,7 +41,7 @@
         },
         {
             "id": 4,
-            "title": "Draft",
+            "title": "Draft (in progress...⏳)",
             "desc": "Resume builder saas project",
             "img": "https://res.cloudinary.com/daiio9iqt/image/upload/v1694360625/projects/Dashboard_bkzlmq.png",
             "type": "Dashboard application",
