--- a/app/data/projects.json
+++ b/app/data/projects.json
@@ -45,6 +45,7 @@
         {
             "id": 4,
             "title": "Draft (in progress...⏳)",
+            "slug": "draft",
             "desc": "Resume builder saas project",
             "img": "https://res.cloudinary.com/daiio9iqt/image/upload/v1694360625/projects/Dashboard_bkzlmq.png",
             "type": "Dashboard application",
